# Embedded_competition

./: .gitignore  .tmp_recomment_cn.ps1  .tmp_recomment_main.ps1  .tmp_restore_main_from_history.ps1  AGENTS.md  CMakeLists.txt  DEMO_RUNBOOK.md  PROJECT_GUIDE.md  README.md  README.zh-CN.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4
CH32/: .project  .template  control_motor.launch  control_motor.wvproj
CH32/.mrs/: 018a4f941671aef8dfbca7919310f229-.snapshot  control_motor.mrs-workspace  preferredEncoding.json
CH32/User/: HX711.c  HX711.h  L298N.c  L298N.h  TMC2209.h  ch32_app.c  ch32_app.h  esp32_com.c  esp32_com.h  inner_door.c  inner_door.h  main.c
Embedded_competition_CH32/: .cproject
Embedded_competition_CH32/.mrs/: 5f99702c79d378b9b8214dfe0d047330-.snapshot  5fcbd7b14c7ebbdb4b2c70574d62325e-.snapshot  7614035a0df08ddee30f8d39056c1343-.snapshot  control_motor.mrs-workspace  launch.json
Embedded_competition_CH32/User/: L298N.h  TMC2209.c  ch32_app.c  esp32_com.c  esp32_com.h  main.c
artifacts/competition_final/: README.md  flash_args.rollback_head
components/app_types/: CMakeLists.txt  app_dock_types.h  app_image_utils.c  app_image_utils.h
components/audio_prompt/: CMakeLists.txt  app_audio_prompt.c  app_audio_prompt.h  app_audio_prompt_hw.c  app_audio_prompt_hw.h
components/audio_prompt/assets/: apriltag_located.pcm  docking_complete.pcm  drone_identified.pcm  drone_not_detected.pcm  drone_returned.pcm  outer_door_opening.pcm  ready.pcm  tray_retracting.pcm  weather_paused.pcm
components/bsp/: CMakeLists.txt  bsp_display_port.c  bsp_display_port.h
components/camera/: CMakeLists.txt  app_camera.c  app_camera.h  app_video.c  app_video.h
components/camera/private/: app_camera_route.c  app_camera_route.h
components/control/: CMakeLists.txt  app_ch32_link.c  app_ch32_link.h  app_cloud.c  app_cloud.h  app_ctrl.c  app_ctrl.h  app_ctrl_proto.c  app_dock_judge.c  app_dock_judge.h  app_safety_takeover.c  app_safety_takeover.h  app_task.c  app_task.h
components/control/private/: app_cloud_cmd.c  app_cloud_cmd.h  app_cloud_internal.h  app_cloud_messaging.c  app_cloud_weather.c  app_ctrl_proto.c  app_ctrl_proto.h  app_ctrl_runtime.c  app_ctrl_runtime.h  app_ctrl_text.c  app_ctrl_text.h  app_ctrl_ui.c  app_ctrl_ui.h
components/delivery_photo/: CMakeLists.txt  app_delivery_photo.c  app_delivery_photo.h
components/drone_ai/: CMakeLists.txt  app_drone_ai.cpp  app_drone_ai.h
components/vision_ui/: CMakeLists.txt  app_ai_capture.c  app_ai_capture.h  app_apriltag.c  app_apriltag.h  app_ui.c  app_ui.h  app_ui_assets.c  app_ui_main.c  app_vision.c  app_vision.h  font_loading_cn.c  font_main_title_cn.c  font_title_en.c
components/vision_ui/assets/: cockpit_glyphs.txt  font_button_cn.c  font_cockpit_cn.c  font_cockpit_title_cn.c  font_hud_cn.c  font_loading_cn.c  font_main_title_cn.c  font_safety_title_cn.c  font_title_en.c  logo.c
docs/: PROJECT_MEMORY.md  SEMIFINAL_DEMO_EXPERIENCE_PLAN.md
main/: CMakeLists.txt  Kconfig.projbuild  app_ai_capture.c  app_ai_capture.h  app_apriltag.c  app_apriltag.h  app_camera.c  app_camera.h  app_ch32_link.c  app_ch32_link.h  app_cloud.c  app_cloud.h  app_ctrl.c  app_ctrl.h  app_dock_judge.c  app_dock_judge.h  app_main_services.c  app_main_services.h  app_preview_controller.c  app_preview_controller.h  app_task.c  app_task.h  app_ui.c  app_ui.h  app_video.c  app_video.h  app_vision.c  app_vision.h  bsp_display_port.c  bsp_display_port.h  idf_component.yml  main.c
skyanchor-miniapp/: .gitignore  DATABASE_INDEXES.md  README.md  project.config.json  project.private.config.json
skyanchor-miniapp/cloudfunctions/: README.md
skyanchor-miniapp/cloudfunctions/skyanchorService/: config.json  index.js  package.json
skyanchor-miniapp/legacy_unused/final_trim_20260416/pages/create-order/: index.js  index.json  index.wxml
skyanchor-miniapp/legacy_unused/final_trim_20260416/pages/home/: index.js  index.wxml
skyanchor-miniapp/legacy_unused/final_trim_20260416/pages/notifications/: index.js  index.wxml
skyanchor-miniapp/legacy_unused/final_trim_20260416/pages/order-center/: index.js  index.wxml
skyanchor-miniapp/legacy_unused/final_trim_20260416/pages/order-detail/: index.js  index.wxml
skyanchor-miniapp/legacy_unused/final_trim_20260416/utils/: status-text.js  status.js  target-display.js  target-options.js
skyanchor-miniapp/miniprogram/: app.js  app.json  app.wxss  sitemap.json
skyanchor-miniapp/miniprogram/config/: index.js
skyanchor-miniapp/miniprogram/pages/order-panel/: index.js  index.wxml  index.wxss
skyanchor-miniapp/miniprogram/pages/role/: index.js  index.json  index.wxml  index.wxss
skyanchor-miniapp/miniprogram/pages/sender-dispatch/: index.js  index.json  index.wxml  index.wxss
skyanchor-miniapp/miniprogram/pages/user-orders/: index.js  index.json  index.wxml  index.wxss
skyanchor-miniapp/miniprogram/services/: api.js  http.js
skyanchor-miniapp/miniprogram/utils/: apriltag.js  delivery-notice.js  demo-profile.js  order-display.js  order-status-labels.js  service-status.js
skyanchor-server/: .env.example  .gitignore  README.md  can_write_test.txt  examples.http  pyproject.toml  run.ps1  skyanchor.db-journal  skyanchor_v2.db-journal
skyanchor-server/.venv2/: pyvenv.cfg
skyanchor-server/app/: __init__.py  config.py  main.py
skyanchor-server/app/api/: debug.py  notifications.py  orders.py
skyanchor-server/app/db/: __init__.py  database.py
skyanchor-server/app/mqtt/: __init__.py  client.py
skyanchor-server/app/services/: order_status.py  order_status_clean.py
skyanchor-server/tests/: test_closed_loop.py
tools/: convert_drone_cls_v3_to_espdl.py  train_drone_cls_v3.py
(+20 files in other folders)
