idf_component_register(
   
    SRCS
        "main.c"
        "app_ctrl.c"
        "app_task.c"
        "app_cloud.c"
        "app_ui.c"
        "app_vision.c"
        "app_apriltag.c"
        "bsp_display_port.c"
        "app_camera.c"
        "app_video.c"
        "app_dock_judge.c"
        "app_ch32_link.c"
    INCLUDE_DIRS "."
)
