[project]
name = "skyanchor-server"
version = "0.1.0"
description = "Minimal order backend for SkyAnchor delivery flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "paho-mqtt>=2.1.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
