idf_component_register(
    SRCS
        "app_ctrl.c"
        "private/app_ctrl_proto.c"
        "private/app_ctrl_text.c"
        "app_dock_judge.c"
        "app_task.c"
        "app_cloud.c"
        "private/app_cloud_messaging.c"
        "private/app_cloud_weather.c"
        "private/app_cloud_cmd.c"
        "app_ch32_link.c"
    INCLUDE_DIRS "."
    PRIV_INCLUDE_DIRS "private"
    REQUIRES
        app_types
        vision_ui
        drone_ai
        nvs_flash
        esp_event
        esp_netif
        esp_http_client
        esp_wifi
        espressif__esp_hosted
        mqtt
        mbedtls
        heap
        json
        esp_driver_gpio
        esp_driver_uart
)
